table spacing corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,7 @@ h3 {
   color: #939a9e;
 
 }
+#worktable{
+  
+  column-gap: 40px
+}
